Discovered that the image would cover the nav bar in hamburger mode. fixed it using z-index

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -58,6 +58,7 @@
 
     .navMenu.active {
         left: 0;
+        z-index: 1;
     }
 
     .navItem {
